--- a/rule/ssr.conf
+++ b/rule/ssr.conf
@@ -3,7 +3,7 @@ bypass-system = true
 dns-server = system,119.29.29.29,114.114.114.114
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com
 bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
-update-url = https://raw.githubusercontent.com/pxylen/abc_/master/rule/ssr.conf
+update-url = https://ghproxy.com/https://raw.githubusercontent.com/pxylen/abc_/master/rule/ssr.conf
 
 [Rule]
 
@@ -14,37 +14,37 @@ URL-REGEX,^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.comic\/flash,REJE
 
 
 # 外国规则
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Telegram/Telegram.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/YouTube/YouTube.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/TikTok/TikTok.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Twitter/Twitter.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Github/Github.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Google/Google.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Speedtest/Speedtest.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy.list,PROXY
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy_Domain.list,PROXY
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Telegram/Telegram.list,PROXY
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/YouTube/YouTube.list,PROXY
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/TikTok/TikTok.list,PROXY
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Twitter/Twitter.list,PROXY
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Github/Github.list,PROXY
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Google/Google.list,PROXY
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Speedtest/Speedtest.list,PROXY
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy.list,PROXY
+DOMAIN-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy_Domain.list,PROXY
 
 
 # 直连规则
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AppStore/AppStore.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaTest/ChinaTest.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list,DIRECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list,DIRECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AppStore/AppStore.list,DIRECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaTest/ChinaTest.list,DIRECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list,DIRECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list,DIRECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,DIRECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list,DIRECT
 
 
 # 个人规则
-RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_direct.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_proxy.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_reject.list,REJECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_direct.list,DIRECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_proxy.list,PROXY
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_reject.list,REJECT
 
 
 # 广告拦截
 RULE-SET,https://anti-ad.net/surge.txt,REJECT
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Privacy/Privacy_Domain.list,REJECT
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AdvertisingTest/AdvertisingTest.list,REJECT
+DOMAIN-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Privacy/Privacy_Domain.list,REJECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AdvertisingTest/AdvertisingTest.list,REJECT
 
 
 #--其他规则
@@ -129,30 +129,30 @@ https?://(www.)?google.cn https://www.google.com 302
 [Script]
 
 # B站精简
-BiliBili_推荐去广告 = type=http-response,script-path=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index\?,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
-BiliBili_追番去广告 = type=http-response,script-path=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/api\.bilibili\.com\/pgc\/page\/bangumi,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
-BiliBili_直播去广告 = type=http-response,script-path=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/api\.live\.bilibili\.com\/xlive\/app-room\/v1\/index\/getInfoByRoom,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
-BiliBili_动态去广告 = type=http-response,script-path=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/api\.vc\.bilibili\.com\/dynamic_svr\/v1\/dynamic_svr\/dynamic_new\?,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
-BiliBili_开屏去广告 = type=http-response,script-path=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/app\.bilibili\.com\/x\/v2\/splash\/list,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
-BiliBili_标签页处理 = type=http-response,script-path=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/tab,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
-BiliBili_我的页面处理 = type=http-response,script-path=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/mine,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+BiliBili_推荐去广告 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index\?,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+BiliBili_追番去广告 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/api\.bilibili\.com\/pgc\/page\/bangumi,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+BiliBili_直播去广告 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/api\.live\.bilibili\.com\/xlive\/app-room\/v1\/index\/getInfoByRoom,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+BiliBili_动态去广告 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/api\.vc\.bilibili\.com\/dynamic_svr\/v1\/dynamic_svr\/dynamic_new\?,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+BiliBili_开屏去广告 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/app\.bilibili\.com\/x\/v2\/splash\/list,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+BiliBili_标签页处理 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/tab,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+BiliBili_我的页面处理 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/mine,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
 
 
 # 京东开屏广告
-京东_开屏去广告 = type=http-response,script-path=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/startup/startup.js,pattern=^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=start,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
-京东比价 = type=http-response,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js,pattern=^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig),max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+京东_开屏去广告 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/startup/startup.js,pattern=^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=start,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+京东比价 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js,pattern=^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig),max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
 
 
 #-淘宝比价 (trade-acs.m.taobao.com)
-淘宝比价 = type=http-request,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js,pattern=^http://.+/amdc/mobileDispatch,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
-淘宝比价 = type=http-response,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js,pattern=^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+淘宝比价 = type=http-request,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js,pattern=^http://.+/amdc/mobileDispatch,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+淘宝比价 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js,pattern=^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
 
 
 # picsew专业版
-picsew专业版 = type=http-response,script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/picsew.js,pattern=https:\/\/buy\.itunes\.apple\.com\/verifyReceipt,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+picsew专业版 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/picsew.js,pattern=https:\/\/buy\.itunes\.apple\.com\/verifyReceipt,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
 
 
-BoxJs = type=http-request,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/chavy.boxjs.js,pattern=^https?://boxjs.com,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+BoxJs = type=http-request,script-path=https://ghproxy.com/https://raw.githubusercontent.com/chavyleung/scripts/master/box/chavy.boxjs.js,pattern=^https?://boxjs.com,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
 TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/NobyDa/9be418b93afc5e9c8a8f4d28ae403cf2/raw/TF_Download.js,pattern=^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
 
 
