--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -141,7 +141,7 @@ dl.l.google.com = server:119.29.29.29
 
 [MITM]
 enable = true
-hostname = *.googlevideo.com,www.youtube.com,s.youtube.com,api.m.jd.com,me-api.jd.com,trade-acs.m.taobao.com,acs.m.taobao.com,acs.m.taobao.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,slapi.oray.net,analytics.95516.com,tysdk.95516.com,ads.95516.com,mobile.12306.cn,list-app-m.i4.cn,testflight.apple.com,*.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com,mi.gdt.qq.com,w.gdt.qq.com,buy.itunes.apple.com,account.wps.cn,*.amemv.com,
+hostname = *.googlevideo.com,www.youtube.com,s.youtube.com,api.m.jd.com,me-api.jd.com,trade-acs.m.taobao.com,acs.m.taobao.com,acs.m.taobao.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,slapi.oray.net,analytics.95516.com,tysdk.95516.com,ads.95516.com,mobile.12306.cn,list-app-m.i4.cn,testflight.apple.com,*.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com,mi.gdt.qq.com,w.gdt.qq.com,buy.itunes.apple.com,
 skip-server-cert-verify = true
 ca-p12 =
 ca-passphrase =
@@ -175,11 +175,6 @@ BiliBili_我的页面处理 = type=http-response,script-path=https://raw.githubu
 # picsew专业版
 picsew专业版 = type=http-response,script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/picsew.js,pattern=https:\/\/buy\.itunes\.apple\.com\/verifyReceipt,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
 
-#WPS解锁  超级会员、wps会员、稻壳会员 (By eHpo)
-WPS解锁会员 = type=http-response,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Wps.js,pattern=^https://account.wps.*/api/users/,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
-
-抖音去广告&水印req = type=http-request,pattern=^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Aweme.js,timeout=600,script-update-interval=43200,enable=true
-抖音去广告&水印res = type=http-response,pattern=^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/,requires-body=true,max-size=524288,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Aweme.js,timeout=600,script-update-interval=43200,enable=true
 
 BoxJs = type=http-request,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/chavy.boxjs.js,pattern=^https?://boxjs.com,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
 TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/NobyDa/9be418b93afc5e9c8a8f4d28ae403cf2/raw/TF_Download.js,pattern=^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
