--- a/task/lxk0301_LoonTask.conf
+++ b/task/lxk0301_LoonTask.conf
@@ -3,13 +3,14 @@
 
 cron "2 9 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_bean_change.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东资产变动通知
 cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_bean_home.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_bean_home.png, enabled=true, tag=领京豆额外奖励
+cron "20 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_big_winner.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=省钱大赢家之翻翻乐
 cron "0 0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_blueCoin.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxc.png, enabled=true, tag=东东超市兑换奖品
 cron "1 8,12,18 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_bookshop.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=口袋书店
 cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_car.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_redPacket.png, enabled=true, tag=京东汽车
 cron "0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_car_exchange.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_redPacket.png, enabled=true, tag=京东汽车兑换
 cron "0 0-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_carnivalcity.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东手机狂欢城
 cron "2 0-23/4 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_cash.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=签到领现金
-cron "5 0,13,19 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_cfd.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxcfd.png, enabled=true, tag=京喜财富岛
+cron "5 8,13,19 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_cfd.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxcfd.png, enabled=true, tag=京喜财富岛
 cron "5 0,23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_club_lottery.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyjd.png, enabled=true, tag=摇京豆
 cron "10 9 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_crazy_joy.png, enabled=true, tag=crazyJoy任务
 cron "10 12 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_bonus.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_crazy_joy.png, enabled=true, tag=监控crazyJoy分红
