--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,8 +1,8 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
-cron "0 0-16/8 * * *" script-path=https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_joy_reward.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdcww.png, enabled=true, tag=京东宠汪汪积分兑换奖品
-cron "20 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_big_winner.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东省钱大赢家之翻翻乐0301版
+cron "0 0-16/8 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_joy_reward.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/hyzaw.png, enabled=true, tag=京东宠汪汪积分兑换奖品
+cron "20 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_big_winner.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东省钱大赢家之翻翻乐0301版
 cron "5,35 * * 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/jiulan/platypus/main/scripts/jd_ffl.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东翻翻乐提现
 cron "10 10 1-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLimitbox.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/zoo.png, enabled=true, tag=京东限时盲盒动物园版
 cron "30 7,19 1-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_limitBox.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/wen.png, enabled=true, tag=京东限时盲盒温某某版
@@ -19,7 +19,7 @@ cron "1 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.c
 cron "1 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard02.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/zoo.png, enabled=true, tag=京东618开卡活动2
 cron "1 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard01.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/zoo.png, enabled=true, tag=京东618开卡活动1
 cron "1 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ry618.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=京东柠檬华为荣耀618
-cron "15 0,6,13,19,21 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东京享值PK
+cron "15 0,6,13,19,21 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/hyzaw.png, enabled=true, tag=京东京享值PK
 cron "0 9-19 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/CenBoMin/GithubSync/main/ELECV2PJS/PushTask_elecV2p.js, img-url=https://cdn.jsdelivr.net/gh/sngxpro/QuanX@master/pic/jiejie.png, enabled=true, tag=V2P推送任务
 cron "0 7 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/CenBoMin/GithubSync/main/ELECV2PJS/PushBoxjsCookie_elecV2p.js, img-url=https://cdn.jsdelivr.net/gh/sngxpro/QuanX@master/pic/jiejie.png, enabled=true, tag=手机boxjs的Cookie自动上传V2p
 cron "1 0-23/1 * 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_618redpacket.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/wen.png, enabled=true, tag=京东新潮品牌狂欢翻翻乐
